# api

./: pyproject.toml  Отчет.txt
api_translate/: __init__.py  fastAPI_main.py  translate_words.py
dl/: __init__.py  detect_lang.py
dl/FastDetect_DS/: FastText_Detect_Language-az_lang.tsv  FastText_Detect_Language-blr_lang.tsv  FastText_Detect_Language-es_lang.tsv  FastText_Detect_Language-ge_lang.tsv  FastText_Detect_Language-kz_lang.tsv  FastText_Detect_Language-kz_rus_symb_lang.tsv  FastText_Detect_Language-pl_lang.tsv  FastText_Detect_Language-uz_lang.tsv
tests/: test.py
translate_datasets/: datasets.py
translate_datasets/main_ds/: az-rus.tsv  blr-rus.tsv  ge-rus.tsv  kz-rus.tsv  kz_rus_symb-rus.tsv  pl-rus.tsv  uz-rus.tsv
